# sauce-labs-selenium-pytest

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  create_reports.sh  delete_reports.sh  index.html  pyproject.toml
.github/workflows/: main-branch-deployment.yml
10/: index.html
10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: history-trend.json  history.json
10/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
11/widgets/: executors.json  retry-trend.json  status-chart.json  summary.json
12/: index.html
12/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json  (+2 more)
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: categories-trend.json  duration-trend.json
tests/: conftest.py  test_selenium.py
utilities/: utils.py
(+344 files in other folders)
